<resources>
    <string name="app_name">Ungvár</string>
    <string name="slogan_name"> Your city app</string>
    <string name="powered_by"> Powered By lucianrekkless</string>

    // strings for on boarding screen


    <string-array name="profile_update_options">
        <item>Update</item>
        <item>Profile Image</item>
        <item>Full Name</item>
        <item>Phone number</item>
        <item>Password</item>
    </string-array>

    // titles
    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make A Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>

    // descriptions
    <string name="first_slide_desc">You can search any places nearby</string>
    <string name="second_slide_desc">We provide a phone numbers of all our places</string>
    <string name="third_slide_desc">If you have a shop or something that you want to be a part of our growing app, feel free to create it</string>
    <string name="fourth_slide_desc">We will handle everything for you as long as you use our app</string>


    // buttons
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">"Let's GO!"</string>


    // Dashboard

    //Categories
    <string name="other">Other</string>
    <string name="residence">Residence</string>
    <string name="food">Food and Drink</string>
    <string name="shops">Shops</string>
    <string name="banks">Banks</string>
    <string name="airports">Airports</string>
    <string name="education">Education</string>
    <string name="work">Work</string>
    <string name="entertain">Entertainment</string>


    <string name="transport">Transport</string>
    <string name="buses">Buses</string>
    <string name="taxi">Taxi</string>
    <string name="trains">Trains</string>


    // Titles and Desc

    <string name="featured_locations">All Featured Locations</string>
    <string name="featured_locations_description">All the locations that are featured and have a top demand in town!</string>
    <string name="most_liked_locations">Most Liked</string>
    <string name="categories">Categories</string>
    <string name="updated">Recently Updated</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search...</string>

    <!--      Menu Names      -->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="all_categories">All Categories</string>
    <string name="add_missing_place">Add Missing Place</string>
    <string name="my_favorites">My Favorites</string>

    <string name="login">Login</string>
    <string name="login_signup">Login / Sign Up</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>

    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>

    // Retailer panel strings
    // General strings
    <string name="sign_up">Sign Up</string>
    <string name="retailer_heading">Join Ungvár</string>
    <string name="retailer_tag_line">Connect with city mates\nGet a directions\nGrow your business</string>
    <string name="create_account">Create Account</string>
    <string name="how_we_work">How we work?</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forgot Password</string>
    <string name="make_selection">Make selection</string>
    <string name="forget_password_detail">Provide your account`s phone number to reset the password</string>
    <string name="make_selection_detail">Select which contact detail should we use to reset your password</string>
    <string name="via_sms">via sms:</string>
    <string name="via_email">via email:</string>
    <string name="new_credentials">Create New Password</string>
    <string name="new_credentials_detail">Verification completed successfully! Set a new password for your account</string>
    <string name="new_password">New Password</string>
    <string name="password_updated">Password Updated</string>
    <string name="password_updated_success_message">Your Password Has Been Updated!</string>
    <string name="registration_success">Registration Successful!</string>
    <string name="registration_success_message">Your account has been created!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="show_on_map">Show on Google maps</string>
    <string name="manage_my_places">Manage my Places</string>
    <string name="liked_places">Places I Like</string>
    <string name="liked_description">Here you will see Places you like</string>
    <string name="manage_description">You have not created Places.. Yet!</string>


    <string name="enter_username">Username</string>
    <string name="enter_password">Password</string>
    <string name="enter_full_name">Full Name</string>
    <string name="enter_email">Email</string>
    <string name="enter_phone_number">Phone Number</string>

    //validation
    <string name="val_not_empty">Field can not be empty</string>
    <string name="val_too_large">Too large!</string>
    <string name="val_no_whitespaces">No white spaces are allowed</string>
    <string name="val_invalid_email">Invalid Email</string>
    <string name="val_too_short">Too short</string>
    <string name="val_match_password">Passwords does not match</string>
    <string name="val_select">Please select one</string>
    <string name="val_age">You are not eligible to apply!</string>
    <string name="val_phone">Enter valid phone number</string>
    <string name="val_maplink">Invalid Google maps link</string>

    //OTP
    <string name="otp_code_text">Code</string>
    <string name="otp_verification_text">Verification</string>
    <string name="otp_description_text">Enter One Time Password Sent On:</string>
    <string name="verify_code">Verify Code</string>
    <string name="otp_complete">Verification Completed!</string>
    <string name="otp_not_completed">Verification not completed! try again</string>

    //login
    <string name="login_complete">Logged in Success!</string>
    <string name="wrong_password">Wrong password!</string>
    <string name="val_user">No such user exist</string>
    <string name="already_exist">Already exist</string>


    //custom dialog internet
    <string name="no_internet">No internet connection!</string>
    <string name="no_internet_first_start">Internet connection is required, for first time launch</string>
    <string name="delete_place">Are you sure you want to delete this place:\n</string>
    <string name="cancel_edit">Are you sure you want to exit editing?\nUnsaved changes will be lost!</string>
    <string name="use_owner_phone">Phone number is required.\nWould you like to use owner number:\n</string>
    <string name="likers">Users who likes this:\n</string>
    <string name="yes">Yes</string>
    <string name="ok">Ok</string>
    <string name="no">No</string>
    <string name="connect">Connect</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Close app</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="test_place_description">
        Landmark stone castle housing multiple museums with collections of instruments, clothing and artwork Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
    </string>

    //solution for hyperlink inside TextView
    <string name="test">&lt;a href=https://goo.gl/maps/Y6Q7Vqh8Z1TS1ctZ8&gt;Show on Google maps&lt;/a&gt;</string>

    //href tag for TextView phone call
    <string name="test_call">+6494461709</string>


</resources>