<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <group android:checkableBehavior="none">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/search_icon"
            android:title="@string/search" />


    </group>

    <item android:title="Profile">
        <menu>

            <group android:checkableBehavior="none">

                <item
                    android:id="@+id/nav_login_signup"
                    android:icon="@drawable/user_done_icon"
                    android:title="@string/login_signup"/>


            </group>

        </menu>


    </item>


    <item android:title="Actions">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/menu_share_icon"
                    android:title="@string/share" />
                <item
                    android:id="@+id/nav_rate_us"
                    android:icon="@drawable/menu_rate_us_icon"
                    android:title="@string/rate_us" />
            </group>
        </menu>
    </item>

</menu>