<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context=".Common.LoginSignup.RetailerStartUpScreen">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:transitionName="transition_retailer"
            android:layout_height="300dp"
            android:src="@drawable/app_image_main" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textStyle="bold"
            android:text="@string/retailer_heading"
            android:textAlignment="center"
            android:textColor="@color/Black"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/pitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:text="@string/retailer_tag_line"
            android:textColor="@color/Black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">


            <Button
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:elevation="5dp"
                android:onClick="callLoginScreen"
                android:background="@color/colorPrimary"
                android:text="@string/login"
                android:textColor="@color/Black"
                tools:ignore="ButtonStyle"
                android:transitionName="transition_login"/>

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="callSignUpScreen"
                android:layout_margin="10dp"
                android:elevation="5dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/sign_up"
                android:textColor="@color/Black"
                tools:ignore="ButtonStyle"
                android:transitionName="transition_signup"/>


        </LinearLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/how_we_work"
            android:textColor="@color/Black" />


    </LinearLayout>

</ScrollView>