<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Common.LoginSignup.ForgetPasswordSuccessMessage"
    android:background="@color/White"
    android:orientation="vertical">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_updated"
            android:textColor="@color/Black"
            android:textSize="40sp"
            android:fontFamily="@font/muli_black"
            android:textAlignment="center"
            android:textAllCaps="true" />

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/done_mark"
            app:tint="#006400"
            android:layout_margin="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_updated_success_message"
            android:textColor="@color/Black"
            android:textSize="16sp"
            android:fontFamily="@font/muli_light"
            android:textAlignment="center"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:onClick="callLoginScreen"
            android:background="@color/colorPrimary"
            android:elevation="8dp"
            android:textColor="@color/Black"
            android:layout_margin="20dp"/>


    </LinearLayout>

</ScrollView>