<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/forget_password_layout"
    android:onClick="hideKeyboard"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Common.LoginSignup.ForgetPassword"
    android:background="@color/White">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/forget_password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/muli_black"
            android:text="@string/forget_password"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/Black"
            android:textSize="40sp" />

        <ImageView
            android:id="@+id/forget_password_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/forget_password_icon" />

        <TextView
            android:id="@+id/forget_password_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/muli_light"
            android:text="@string/forget_password_detail"
            android:textAlignment="center"
            android:textColor="@color/Black"
            android:textSize="18sp" />

        <com.hbb20.CountryCodePicker
            android:id="@+id/country_code_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/black_border"
            android:padding="7dp"
            app:ccp_autoDetectCountry="true"
            app:ccp_showFlag="true"
            app:ccp_showFullName="true"
            app:ccp_showNameCode="true" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forget_password_phone_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_phone_number"
            app:boxStrokeColor="@color/Black"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/Black"
            app:startIconDrawable="@drawable/field_phone_number_icon"
            app:startIconTint="@color/Black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/muli_semibold"
                android:inputType="phone"
                android:textColor="@color/Black"
                android:textCursorDrawable="@null" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/forget_password_next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/colorPrimary"
            android:elevation="8dp"
            android:onClick="verifyPhoneNumber"
            android:text="@string/next_btn"
            android:textColor="@color/Black" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/progressbar_background"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true" />


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>